@@ -1,3 +1,9 @@
+2003-06-07  Keisuke Nishida  <knishida@netlab.jp>
+
+	* common.h (cob_module): New member `collating_sequence'.
+	* common.c (CMP): New macro.
+	(cmp_char, cmp_all, cmp_alnum): Use CMP.
+
 2003-05-29  Keisuke Nishida  <knishida@netlab.jp>
 
 	* common.h (cob_switch): Removed.
